--- a/index.html
+++ b/index.html
@@ -1476,5 +1476,25 @@ function boot(){move();var o=new MutationObserver(move);o.observe(document.body,
 if(document.readyState==='complete'||document.readyState==='interactive')boot();else document.addEventListener('DOMContentLoaded',boot);
 })();
 </script>
+
+  <!-- Vercel Web Analytics -->
+<script>
+  window.va =
+    window.va ||
+    function () {
+      (window.vaq = window.vaq || []).push(arguments);
+    };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
+
+<!-- Vercel Speed Insights -->
+<script>
+  window.si =
+    window.si ||
+    function () {
+      (window.siq = window.siq || []).push(arguments);
+    };
+</script>
+<script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 </html>
