--- a/index.html
+++ b/index.html
@@ -1477,6 +1477,8 @@ if(document.readyState==='complete'||document.readyState==='interactive')boot();
 })();
 </script>
 
+  <!-- force vercel analytics deploy -->
+
   <!-- Vercel Web Analytics -->
 <script>
   window.va =
