--- a/index.html
+++ b/index.html
@@ -1477,6 +1477,47 @@ if(document.readyState==='complete'||document.readyState==='interactive')boot();
 })();
 </script>
 
+  <script>
+  (function () {
+    // change this to whatever password you want
+    const CORRECT_PASSWORD = "porsche123"; 
+
+    const overlay = document.getElementById("password-overlay");
+    const form = document.getElementById("password-form");
+    const input = document.getElementById("password-input");
+    const error = document.getElementById("password-error");
+    const STORAGE_KEY = "residualAppAuthed_v1";
+
+    function unlock() {
+      overlay.style.display = "none";
+      localStorage.setItem(STORAGE_KEY, "1");
+    }
+
+    // If already authed on this device, skip prompt
+    try {
+      if (localStorage.getItem(STORAGE_KEY) === "1") {
+        unlock();
+        return;
+      }
+    } catch (e) {
+      // ignore localStorage errors, just show overlay
+    }
+
+    form.addEventListener("submit", function (e) {
+      e.preventDefault();
+      const val = input.value.trim();
+
+      if (val === CORRECT_PASSWORD) {
+        unlock();
+      } else {
+        error.textContent = "Incorrect password. Try again.";
+        input.value = "";
+        input.focus();
+      }
+    });
+  })();
+</script>
+
   <!-- force vercel analytics deploy -->
 
   <!-- Vercel Web Analytics -->
@@ -1498,5 +1539,61 @@ if(document.readyState==='complete'||document.readyState==='interactive')boot();
     };
 </script>
 <script defer src="/_vercel/speed-insights/script.js"></script>
+
+  <!-- Password Overlay -->
+  <div id="password-overlay"
+       style="
+        position: fixed;
+        inset: 0;
+        background: #050608;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+       ">
+    <div style="text-align: center; max-width: 320px; padding: 24px; border-radius: 12px; background: #141821; box-shadow: 0 10px 30px rgba(0,0,0,0.7);">
+      <h2 style="margin: 0 0 12px; font-family: system-ui, -apple-system, BlinkMacSystemFont;">
+        Residual App – Login
+      </h2>
+      <p style="margin: 0 0 16px; font-size: 14px; opacity: 0.8;">
+        Enter the access password to continue.
+      </p>
+      <form id="password-form">
+        <input id="password-input"
+               type="password"
+               placeholder="Password"
+               autocomplete="off"
+               style="
+                width: 100%;
+                padding: 10px 12px;
+                border-radius: 8px;
+                border: 1px solid #333;
+                background:#0c0f16;
+                color:#fff;
+               " />
+        <div id="password-error"
+             style="margin-top: 8px; font-size: 12px; color:#ff6b6b; min-height: 16px;"></div>
+        <button type="submit"
+                style="
+                  margin-top: 14px;
+                  width: 100%;
+                  padding: 10px 12px;
+                  border-radius: 8px;
+                  border: none;
+                  background: #e50914;
+                  color: #fff;
+                  font-weight: 600;
+                  cursor: pointer;
+                ">
+          Enter
+        </button>
+      </form>
+    </div>
+  </div>
+  <!-- end Password Overlay -->
+  
+  <!-- your existing page content starts below here -->
+
 </body>
 </html>
