--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           <div class="pill">⚡ Residual Pro — By Ricardo</div>
           <select id="programSel" class="select">
             <option value="__current__">Program: Current (from ?data or default)</option>
-            <option value="porsche_residuals_all.json" selected>Program: PB 25-10R (Default)</option>
+            <option value="porsche_residuals_all.json" selected>Program: JAN 20026 (Default)</option>
             <option value="porsche_residuals_25-09R.json">Program: PB 25-09R (Oct)</option>
           </select>
         </div>
