--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
   .top {
     position: sticky; top: 0; z-index: 50;
     backdrop-filter: blur(30px) saturate(180%); -webkit-backdrop-filter: blur(30px) saturate(180%);
-    background: rgba(255, 255, 255, 0.8);
-    border: 1px solid var(--border); border-radius: 14px; /* slightly tighter */
+    background: var(--card);
+    border: 1px solid var(--border); border-radius: 14px;
     padding: 12px 16px; margin-bottom: 18px; box-shadow: var(--shadow);
     animation: slideInFromTop 0.6s ease;
   }
@@ -300,7 +300,7 @@
           <div class="pill">⚡ Residual Pro — By Ricardo</div>
           <select id="programSel" class="select">
             <option value="__current__">Program: Current (from ?data or default)</option>
-            <option value="porsche_residuals_all.json" selected>Program: JAN 20026 (Default)</option>
+            <option value="porsche_residuals_all.json" selected>Program: PB 25-10R (Default)</option>
             <option value="porsche_residuals_25-09R.json">Program: PB 25-09R (Oct)</option>
           </select>
         </div>
